--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "webpack-dev-server --contentBase dist --open --port 8888"
     },
     "keywords": [],
     "author": "",
@@ -28,6 +29,10 @@
         "webpack-dev-server": "^2.9.7"
     },
     "dependencies": {
-        "vue": "^2.5.11"
+        "axios": "^0.17.1",
+        "element-ui": "^2.0.8",
+        "normalize.css": "^7.0.0",
+        "vue": "^2.5.11",
+        "vue-router": "^3.0.1"
     }
 }
